--- a/Android-Application/res/layout/main.xml
+++ b/Android-Application/res/layout/main.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="vertical"
 	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
+	android:layout_height="fill_parent"
+	android:gravity="center_horizontal|top">
 	<TextView
 		android:id="@+id/main_big_time"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="2:01 AM"
 		android:textSize="60dip"
-		android:layout_centerHorizontal="true"
 		android:layout_marginTop="10dip"/>
-</RelativeLayout>
+</LinearLayout>
