--- a/Android-Application/res/layout/main.xml
+++ b/Android-Application/res/layout/main.xml
@@ -10,6 +10,28 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="2:01 AM"
-		android:textSize="60dip"
+		android:textSize="55dip"
 		android:layout_marginTop="10dip"/>
+	<TextView
+		android:id="@+id/main_time_left_to_sleep"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="4:29 left to sleep"
+		android:textSize="20dip"/>
+	<TextView
+		android:id="@+id/main_remaining_cycles"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="2.9 remaining cycles"
+		android:textSize="20dip"/>
+		<View
+			android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:background=""/>
+	<TextView
+		android:id="@+id/main_time_left_to_sleep"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="4:29 left to sleep"
+		android:textSize="20dip"/>
 </LinearLayout>
