--- a/Android-Application/res/layout/main.xml
+++ b/Android-Application/res/layout/main.xml
@@ -77,6 +77,7 @@
 		</LinearLayout>
 	</ScrollView>
 	<Button
+		android:id="@+id/main_do_sleep_button"
 		android:layout_height="wrap_content"
 		android:layout_width="wrap_content"
 		android:layout_centerHorizontal="true"
