--- a/Android-Application/res/layout/preference_view.xml
+++ b/Android-Application/res/layout/preference_view.xml
@@ -4,7 +4,7 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:stretchColumns="*">
-	<TableRow>
+	<TableRow android:id="@+id/preference_view_row">
 		<TextView
 			android:id="@+id/preference_view_left_text"
 			android:layout_width="fill_parent"
