--- a/Android-Application/res/xml/options.xml
+++ b/Android-Application/res/xml/options.xml
@@ -6,7 +6,7 @@
 		android:dialogMessage="@string/pref_sleep_cycle_summary"
 		android:positiveButtonText="OK"
 		android:negativeButtonText="Cancel"
-		android:key="key_cycle_time"
+		android:key="@string/key_cycle_time"
 		android:title="@string/pref_sleep_cycle_title"
 		android:summary="@string/pref_sleep_cycle_summary"
 		android:defaultValue="90"/>
