--- a/Android-Application/res/layout/main.xml
+++ b/Android-Application/res/layout/main.xml
@@ -3,13 +3,12 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
-	<TextView
+	<DigitalClock
 		android:id="@+id/main_big_time"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_centerHorizontal="true"
 		android:layout_alignParentTop="true"
-		android:text="2:01 AM"
 		android:textSize="55dip"
 		android:layout_marginTop="10dip"/>
 	<TextView
