--- a/Android-Application/res/layout/preference_view.xml
+++ b/Android-Application/res/layout/preference_view.xml
@@ -4,17 +4,21 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:stretchColumns="*">
-	<TableRow android:id="@+id/preference_view_row">
+	<TableRow
+		android:id="@+id/preference_view_row"
+		android:padding="5dip">
 		<TextView
 			android:id="@+id/preference_view_left_text"
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
+			android:textSize="20sp"
 			android:gravity="left"
 			android:text="Test"/>
 		<TextView
 			android:id="@+id/preference_view_right_text"
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
+			android:textSize="20sp"
 			android:gravity="left"
 			android:text="Test"/>
 	</TableRow>
