--- a/Android-Application/res/layout/edit_alarm.xml
+++ b/Android-Application/res/layout/edit_alarm.xml
@@ -1,6 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent">
-</LinearLayout>
+<ScrollView
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
+	<LinearLayout
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:orientation="vertical">
+		<TimePicker
+			android:id="@+id/alarm_time"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center_horizontal"/>
+		<com.fernferret.android.fortywinks.PreferenceView
+			android:id="@+id/threshold"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"/>
+		<com.fernferret.android.fortywinks.PreferenceView
+			android:id="@+id/followups"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"/>
+		<com.fernferret.android.fortywinks.PreferenceView
+			android:id="@+id/interval"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"/>
+		<Button
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginLeft="20dip"
+			android:layout_marginRight="20dip"
+			android:paddingTop="8dip"
+			android:paddingBottom="8dip"
+			android:text="Save"/>
+	</LinearLayout>
+</ScrollView>
