--- a/Android-Application/res/layout/alarm_line_item.xml
+++ b/Android-Application/res/layout/alarm_line_item.xml
@@ -2,5 +2,35 @@
 <RelativeLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
+	android:layout_height="70dip">
+	<TextView
+		android:id="@+id/alarm_line_item_time"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_centerHorizontal="true"
+		android:layout_alignParentLeft="true"
+		android:textSize="35sp"
+		android:text="12:05 pm"/>
+	<CheckBox
+		android:id="@+id/alarm_line_item_enabled"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_centerVertical="true"
+		android:layout_alignParentRight="true"/>
+	<TextView
+		android:id="@+id/alarm_line_item_threshold"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentTop="true"
+		android:layout_marginRight="10dip"
+		android:layout_toLeftOf="@id/alarm_line_item_enabled"
+		android:text="T:30"/>
+	<TextView
+		android:id="@+id/alarm_line_item_days"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginRight="10dip"
+		android:layout_alignParentBottom="true"
+		android:layout_toLeftOf="@id/alarm_line_item_enabled"
+		android:text="Su Mo Tu We Th Fr Sa"/>
 </RelativeLayout>
