--- a/Android-Application/res/layout/main.xml
+++ b/Android-Application/res/layout/main.xml
@@ -45,6 +45,7 @@
 		android:text="Next Alarm at:"
 		android:textSize="30dip"/>
 	<ScrollView
+		android:id="@+id/main_next_alarm_scroller"
 		android:layout_width="120dip"
 		android:layout_height="170dip"
 		android:layout_centerHorizontal="true"
@@ -56,6 +57,13 @@
 			android:layout_width="fill_parent">
 		</LinearLayout>
 	</ScrollView>
+	<Button
+		android:id="@+id/main_new_quick_alarm_button"
+		android:layout_height="wrap_content"
+		android:layout_width="wrap_content"
+		android:text="Add Quick Alarm"
+		android:layout_toRightOf="@id/main_next_alarm_scroller"
+		android:layout_alignBottom="@id/main_next_alarm_scroller"/>
 	<Button
 		android:id="@+id/main_do_sleep_button"
 		android:layout_height="wrap_content"
