--- a/Android-Application/res/layout/main.xml
+++ b/Android-Application/res/layout/main.xml
@@ -62,8 +62,7 @@
 		android:layout_height="wrap_content"
 		android:layout_width="wrap_content"
 		android:text="Add Quick Alarm"
-		android:layout_toRightOf="@id/main_next_alarm_scroller"
-		android:layout_alignBottom="@id/main_next_alarm_scroller"/>
+		android:layout_toRightOf="@id/main_next_alarm_scroller"/>
 	<Button
 		android:id="@+id/main_do_sleep_button"
 		android:layout_height="wrap_content"
@@ -79,6 +78,8 @@
 		android:layout_height="wrap_content"
 		android:handle="@+id/main_drawer_button"
 		android:content="@+id/main_drawer_content"
+		android:layout_alignParentBottom="true"
+		android:layout_centerHorizontal="true"
 		android:topOffset="100dip">
 		<ImageView
 			android:id="@id/main_drawer_button"
@@ -95,7 +96,8 @@
 			<ListView
 				android:id="@+id/main_quick_alarms_list"
 				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"/>
+				android:layout_height="wrap_content"
+				android:choiceMode="singleChoice"/>
 		</LinearLayout>
 	</SlidingDrawer>
 </RelativeLayout>
