--- a/Android-Application/res/values/preference_strings.xml
+++ b/Android-Application/res/values/preference_strings.xml
@@ -3,4 +3,6 @@
 <string name="pref_sleep_cycle_summary">Please enter how long you need to complete one REM cycle on average</string>
 <string name="key_cycle_time">key_cycle_time</string>
 <string name="key_number_quick_alarms">key_number_quick_alarms</string>
+<string name="key_followup_alarms">key_followup_alarms</string>
+<string name="key_followup_interval">key_followup_interval</string>
 </resources>
