--- a/Android-Application/res/layout/wake_up_alert.xml
+++ b/Android-Application/res/layout/wake_up_alert.xml
@@ -1,11 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="vertical"
+	android:gravity="center"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
-	<Button
-		android:id="@+id/wake_up_alert_close"
-		android:text="Ok, i'm ready to wake up!"
+	<LinearLayout
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"/>
+		android:layout_height="wrap_content"
+		android:layout_margin="20dip"
+		android:padding="5dip"
+		android:orientation="vertical"
+		android:gravity="center_horizontal"
+		android:background="@drawable/popup_bg_9p">
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="It is:"/>
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textSize="30sp"
+			android:text="2:01 am"/>
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Time to get up!"
+			android:paddingBottom="40dip"/>
+		<Button
+			android:id="@+id/wake_up_alert_close"
+			android:text="Ok, i'm ready to wake up!"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:padding="10dip"/>
+	</LinearLayout>
 </LinearLayout>
