--- a/Android-Application/res/layout/new_quik_alarm.xml
+++ b/Android-Application/res/layout/new_quik_alarm.xml
@@ -3,7 +3,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
-	android:gravity="center"
+	android:gravity="center_horizontal"
 	android:orientation="vertical">
 	<TextView
 		android:layout_width="wrap_content"
@@ -24,4 +24,18 @@
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"/>
 	</RadioGroup>
+	<LinearLayout
+		android:id="@+id/new_quik_alarm_time_until"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content">
+		<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Enter the time in hours and minutes for the alarm to go off"/>
+	</LinearLayout>
+	<LinearLayout
+		android:id="@+id/new_quik_alarm_time_for"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content">
+	</LinearLayout>
 </LinearLayout>
