--- a/Android-Application/res/layout/small_alarm_line_item.xml
+++ b/Android-Application/res/layout/small_alarm_line_item.xml
@@ -5,17 +5,17 @@
 	android:layout_height="wrap_content">
 	<TextView
 		android:id="@+id/small_alarm_line_item_time"
-		android:layout_width="100dip"
+		android:layout_width="150dip"
 		android:layout_height="wrap_content"
-		android:textSize="20sp"
+		android:textSize="30sp"
 		android:gravity="center"
 		android:text="12:22 pm"/>
 	<ImageView
 		android:id="@+id/small_alarm_line_item_icon"
-		android:layout_width="20dip"
-		android:layout_height="20dip"
+		android:layout_width="30dip"
+		android:layout_height="30dip"
 		android:layout_toRightOf="@id/small_alarm_line_item_time"
 		android:layout_centerVertical="true"
 		android:scaleType="fitXY"
-		android:src="@drawable/quick"/>
+		android:src="@drawable/zs"/>
 </RelativeLayout>
