--- a/Android-Application/res/menu/main_menu.xml
+++ b/Android-Application/res/menu/main_menu.xml
@@ -2,6 +2,10 @@
 <menu
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
+		android:id="@+id/menu_add_quik_alarm"
+		android:title="Add Quik Alarm"
+		android:icon="@drawable/ic_menu_lightning"/>
+	<item
 		android:id="@+id/menu_options"
 		android:title="Options"
 		android:icon="@drawable/ic_menu_preferences"/>
