--- a/Android-Application/res/layout/new_quik_alarm.xml
+++ b/Android-Application/res/layout/new_quik_alarm.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:gravity="center_horizontal"
 	android:orientation="vertical">
 	<TextView
+		android:id="@+id/new_quik_alarm_title"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_centerHorizontal="true"
+		android:layout_alignParentTop="true"
+		android:padding="10dip"
+		android:textSize="30dip"
 		android:text="New Quik Alarm"/>
 	<RadioGroup
 		android:id="@+id/new_quik_alarm_type_radio_group"
+		android:layout_centerHorizontal="true"
+		android:layout_below="@id/new_quik_alarm_title"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
 		<RadioButton
@@ -25,19 +32,25 @@
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"/>
 	</RadioGroup>
+	<View
+		android:id="@+id/new_quik_alarm_seperator"
+		android:layout_width="fill_parent"
+		android:layout_height="1px"
+		android:layout_below="@id/new_quik_alarm_type_radio_group"
+		android:layout_marginTop="10dip"
+		android:layout_marginBottom="10dip"
+		android:background="@color/seperator_color"/>
+	<TimePicker
+		android:id="@+id/new_quik_alarm_time_picker"
+		android:layout_centerHorizontal="true"
+		android:layout_below="@id/new_quik_alarm_seperator"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
 	<TextView
 		android:id="@+id/new_quik_alarm_help_text"
+		android:layout_below="@id/new_quik_alarm_time_picker"
+		android:layout_centerHorizontal="true"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="Enter the time in hours and minutes for the alarm to go off"/>
-	<TimePicker
-		android:id="@+id/new_quik_alarm_time_picker"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"/>
-		<LinearLayout
-		android:orientation="horizontal"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
-		
-		</LinearLayout>
-</LinearLayout>
+</RelativeLayout>
