--- a/Android-Application/res/layout/wake_up_alert.xml
+++ b/Android-Application/res/layout/wake_up_alert.xml
@@ -17,7 +17,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textSize="20sp"
-			android:text="It is:"/>
+			android:text="The time is"/>
 		<DigitalClock
 			android:id="@+id/wake_up_alert_time"
 			android:layout_width="wrap_content"
@@ -32,7 +32,7 @@
 			android:paddingBottom="40dip"/>
 		<Button
 			android:id="@+id/wake_up_alert_close"
-			android:text="Ok, i'm ready to wake up!"
+			android:text="Alright, I'm getting up!"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textSize="20sp"
