--- a/Android-Application/res/menu/main_menu.xml
+++ b/Android-Application/res/menu/main_menu.xml
@@ -7,6 +7,6 @@
 		android:icon="@drawable/ic_menu_lightning"/>
 	<item
 		android:id="@+id/menu_options"
-		android:title="Options"
+		android:title="Settings"
 		android:icon="@drawable/ic_menu_preferences"/>
 </menu>
