--- a/Android-Application/res/values/preference_strings.xml
+++ b/Android-Application/res/values/preference_strings.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources><string name="pref_sleep_cycle_title">Enter Sleep Cycle Time</string>
+<resources><string name="pref_sleep_cycle_title">Sleep cycle length</string>
 <string name="pref_sleep_cycle_summary">Please enter how long you need to complete one REM cycle on average</string>
 <string name="key_cycle_time">key_cycle_time</string>
 <string name="key_number_quick_alarms">key_number_quick_alarms</string>
 <string name="key_followup_alarms">key_followup_alarms</string>
 <string name="key_followup_interval">key_followup_interval</string>
 <string name="key_default_alarm_tone">key_default_alarm_tone</string>
-<string name="pref_time_to_sleep_dialog_title">Enter Time to Fall Asleep</string>
-<string name="pref_time_to_sleep_dialog_message">Please enter the average amount of time it takes you to fall asleep in minutes</string>
-<string name="key_time_to_sleep">key_time_to_sleep</string>
-<string name="pref_time_to_sleep_title">Time to sleep</string>
-<string name="pref_time_to_sleep_summary">Amount of time it takes you to fall asleep</string>
+<string name="pref_time_till_sleep_dialog_title">@string/pref_time_till_sleep_title</string>
+<string name="pref_time_till_sleep_dialog_message">Please enter the average amount of time it takes you to fall asleep in minutes</string>
+<string name="key_time_till_sleep">key_time_till_sleep</string>
+<string name="pref_time_till_sleep_title">Time till sleep</string>
+<string name="pref_time_till_sleep_summary">Average amount of time it takes you to fall asleep</string>
 </resources>
