--- a/Android-Application/res/xml/options.xml
+++ b/Android-Application/res/xml/options.xml
@@ -2,13 +2,13 @@
 <PreferenceScreen
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	<EditTextPreference
-		android:dialogTitle="@string/pref_sleep_cycle_title"
-		android:dialogMessage="@string/pref_sleep_cycle_summary"
-		android:positiveButtonText="OK"
-		android:negativeButtonText="Cancel"
-		android:key="@string/key_cycle_time"
-		android:title="@string/pref_sleep_cycle_title"
-		android:summary="@string/pref_sleep_cycle_summary"
+		android:dialogTitle="@string/pref_cycle_time_dialog_title"
+		android:dialogMessage="@string/pref_cycle_time_dialog_summary"
+		android:positiveButtonText="@string/ok"
+		android:negativeButtonText="@string/cancel"
+		android:key="@string/pref_key_cycle_time"
+		android:title="@string/pref_cycle_time_title"
+		android:summary="@string/pref_cycle_time_summary"
 		android:inputType="number"
 		android:maxLength="3"
 		android:selectAllOnFocus="true"
@@ -16,9 +16,9 @@
 	<EditTextPreference
 		android:dialogTitle="@string/pref_time_till_sleep_dialog_title"
 		android:dialogMessage="@string/pref_time_till_sleep_dialog_message"
-		android:positiveButtonText="OK"
-		android:negativeButtonText="Cancel"
-		android:key="@string/key_time_till_sleep"
+		android:positiveButtonText="@string/ok"
+		android:negativeButtonText="@string/cancel"
+		android:key="@string/pref_key_time_till_sleep"
 		android:title="@string/pref_time_till_sleep_title"
 		android:summary="@string/pref_time_till_sleep_summary"
 		android:inputType="number"
@@ -26,25 +26,25 @@
 		android:selectAllOnFocus="true"
 		android:defaultValue="14"/>
 	<EditTextPreference
-		android:dialogTitle="FollowUp Alarms"
-		android:dialogMessage="Set the default number of FollowUp Alarms"
-		android:positiveButtonText="OK"
-		android:negativeButtonText="Cancel"
-		android:key="@string/key_followup_alarms"
-		android:title="FollowUp Alarms"
-		android:summary="Set the default number of FollowUp Alarms"
+		android:dialogTitle="@string/pref_num_followups_dialog_title"
+		android:dialogMessage="@string/pref_num_followups_dialog_summary"
+		android:positiveButtonText="@string/ok"
+		android:negativeButtonText="@string/cancel"
+		android:key="@string/pref_key_num_followups"
+		android:title="@string/pref_num_followups_title"
+		android:summary="@string/pref_num_followups_summary"
 		android:inputType="number"
 		android:maxLength="2"
 		android:selectAllOnFocus="true"
 		android:defaultValue="4"/>
 	<EditTextPreference
-		android:dialogTitle="FollowUp Interval"
-		android:dialogMessage="Set the default time between FollowUp alarms in mins"
-		android:positiveButtonText="OK"
-		android:negativeButtonText="Cancel"
-		android:key="@string/key_followup_interval"
-		android:title="FollowUp Interval"
-		android:summary="Set the default time between FollowUp alarms in mins"
+		android:dialogTitle="@string/pref_followup_interval_dialog_title"
+		android:dialogMessage="@string/pref_followup_interval_dialog_summary"
+		android:positiveButtonText="@string/ok"
+		android:negativeButtonText="@string/cancel"
+		android:key="@string/pref_key_followup_interval"
+		android:title="@string/pref_followup_interval_title"
+		android:summary="@string/pref_followup_interval_summary"
 		android:inputType="number"
 		android:maxLength="2"
 		android:selectAllOnFocus="true"
@@ -53,7 +53,7 @@
 		android:ringtoneType="all"
 		android:showDefault="true"
 		android:showSilent="false"
-		android:key="@string/key_default_alarm_tone"
-		android:title="Default Alarm Sound"
-		android:summary="Pick the sound that will be used for Quik Alarms and Power Naps"/>
+		android:key="@string/pref_key_ringtone"
+		android:title="@string/pref_ringtone_title"
+		android:summary="@string/pref_ringtone_summary"/>
 </PreferenceScreen>
