--- a/Android-Application/res/xml/options.xml
+++ b/Android-Application/res/xml/options.xml
@@ -1,59 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
 	xmlns:android="http://schemas.android.com/apk/res/android">
-	<EditTextPreference
-		android:dialogTitle="@string/pref_cycle_time_dialog_title"
-		android:dialogMessage="@string/pref_cycle_time_dialog_summary"
-		android:positiveButtonText="@string/ok"
-		android:negativeButtonText="@string/cancel"
-		android:key="@string/pref_key_cycle_time"
-		android:title="@string/pref_cycle_time_title"
-		android:summary="@string/pref_cycle_time_summary"
-		android:inputType="number"
-		android:maxLength="3"
-		android:selectAllOnFocus="true"
-		android:defaultValue="90"/>
-	<EditTextPreference
-		android:dialogTitle="@string/pref_time_till_sleep_dialog_title"
-		android:dialogMessage="@string/pref_time_till_sleep_dialog_message"
-		android:positiveButtonText="@string/ok"
-		android:negativeButtonText="@string/cancel"
-		android:key="@string/pref_key_time_till_sleep"
-		android:title="@string/pref_time_till_sleep_title"
-		android:summary="@string/pref_time_till_sleep_summary"
-		android:inputType="number"
-		android:maxLength="2"
-		android:selectAllOnFocus="true"
-		android:defaultValue="14"/>
-	<EditTextPreference
-		android:dialogTitle="@string/pref_num_followups_dialog_title"
-		android:dialogMessage="@string/pref_num_followups_dialog_summary"
-		android:positiveButtonText="@string/ok"
-		android:negativeButtonText="@string/cancel"
-		android:key="@string/pref_key_num_followups"
-		android:title="@string/pref_num_followups_title"
-		android:summary="@string/pref_num_followups_summary"
-		android:inputType="number"
-		android:maxLength="2"
-		android:selectAllOnFocus="true"
-		android:defaultValue="4"/>
-	<EditTextPreference
-		android:dialogTitle="@string/pref_followup_interval_dialog_title"
-		android:dialogMessage="@string/pref_followup_interval_dialog_summary"
-		android:positiveButtonText="@string/ok"
-		android:negativeButtonText="@string/cancel"
-		android:key="@string/pref_key_followup_interval"
-		android:title="@string/pref_followup_interval_title"
-		android:summary="@string/pref_followup_interval_summary"
-		android:inputType="number"
-		android:maxLength="2"
-		android:selectAllOnFocus="true"
-		android:defaultValue="5"/>
-	<RingtonePreference
-		android:ringtoneType="all"
-		android:showDefault="true"
-		android:showSilent="false"
-		android:key="@string/pref_key_ringtone"
-		android:title="@string/pref_ringtone_title"
-		android:summary="@string/pref_ringtone_summary"/>
+	<PreferenceCategory
+		android:title="@string/pref_personal_category">
+		<EditTextPreference
+			android:dialogTitle="@string/pref_cycle_time_dialog_title"
+			android:dialogMessage="@string/pref_cycle_time_dialog_summary"
+			android:positiveButtonText="@string/ok"
+			android:negativeButtonText="@string/cancel"
+			android:key="@string/pref_key_cycle_time"
+			android:title="@string/pref_cycle_time_title"
+			android:summary="@string/pref_cycle_time_summary"
+			android:inputType="number"
+			android:maxLength="3"
+			android:selectAllOnFocus="true"
+			android:defaultValue="90"/>
+		<EditTextPreference
+			android:dialogTitle="@string/pref_time_till_sleep_dialog_title"
+			android:dialogMessage="@string/pref_time_till_sleep_dialog_message"
+			android:positiveButtonText="@string/ok"
+			android:negativeButtonText="@string/cancel"
+			android:key="@string/pref_key_time_till_sleep"
+			android:title="@string/pref_time_till_sleep_title"
+			android:summary="@string/pref_time_till_sleep_summary"
+			android:inputType="number"
+			android:maxLength="2"
+			android:selectAllOnFocus="true"
+			android:defaultValue="14"/>
+	</PreferenceCategory>
+	<PreferenceCategory
+		android:title="@string/pref_defaults_category">
+		<EditTextPreference
+			android:dialogTitle="@string/pref_num_followups_dialog_title"
+			android:dialogMessage="@string/pref_num_followups_dialog_summary"
+			android:positiveButtonText="@string/ok"
+			android:negativeButtonText="@string/cancel"
+			android:key="@string/pref_key_num_followups"
+			android:title="@string/pref_num_followups_title"
+			android:summary="@string/pref_num_followups_summary"
+			android:inputType="number"
+			android:maxLength="2"
+			android:selectAllOnFocus="true"
+			android:defaultValue="4"/>
+		<EditTextPreference
+			android:dialogTitle="@string/pref_followup_interval_dialog_title"
+			android:dialogMessage="@string/pref_followup_interval_dialog_summary"
+			android:positiveButtonText="@string/ok"
+			android:negativeButtonText="@string/cancel"
+			android:key="@string/pref_key_followup_interval"
+			android:title="@string/pref_followup_interval_title"
+			android:summary="@string/pref_followup_interval_summary"
+			android:inputType="number"
+			android:maxLength="2"
+			android:selectAllOnFocus="true"
+			android:defaultValue="5"/>
+		<RingtonePreference
+			android:ringtoneType="all"
+			android:showDefault="true"
+			android:showSilent="false"
+			android:key="@string/pref_key_ringtone"
+			android:title="@string/pref_ringtone_title"
+			android:summary="@string/pref_ringtone_summary"/>
+	</PreferenceCategory>
+	<PreferenceCategory
+		android:title="@string/pref_debugging_category">
+	</PreferenceCategory>
 </PreferenceScreen>
