Add strings for new preference
Signed-off-by: Jimmy Theis <jimmy@jetheis.com>

--- a/Android-Application/res/values/preference_strings.xml
+++ b/Android-Application/res/values/preference_strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="pref_personal_category">Personal Settings</string>
+	<string name="pref_application_category">Application Settings</string>
 	<string name="pref_defaults_category">Alarm Defaults</string>
 	<string name="pref_debugging_category">Debugging</string>
 
@@ -15,6 +16,12 @@
 	<string name="pref_time_till_sleep_title">Time till sleep</string>
 	<string name="pref_time_till_sleep_summary">Average amount of time it takes you to fall asleep</string>
 	<string name="pref_key_time_till_sleep">key_time_till_sleep</string>
+	
+	<string name="pref_num_powernap_suggestions_dialog_title">@string/pref_num_powernap_suggestions_title</string>
+	<string name="pref_num_powernap_suggestions_dialog_summary">Set the number of suggested power naps in the pull-up drawer</string>
+	<string name="pref_num_powernap_suggestions_title">Number of power nap suggestions</string>
+	<string name="pref_num_powernap_suggestions_summary">Number of power nap suggestions in the pull-up drawer</string>
+	<string name="pref_key_num_powernap_suggestions">key_num_displayed_alarms</string>
 	
 	<string name="pref_num_followups_dialog_title">@string/pref_num_followups_title</string>
 	<string name="pref_num_followups_dialog_summary">Set the default number of follow-up alarms (used in quick alarms and power naps)</string>
@@ -31,6 +38,5 @@
 	<string name="pref_ringtone_title">Alarm sound</string>
 	<string name="pref_ringtone_summary">Default ringtone for alarms</string>
 	<string name="pref_key_ringtone">key_default_ringtone</string>
-	
-	<string name="pref_key_num_displayed_alarms">key_num_displayed_alarms</string>
+
 </resources>
