--- a/Android-Application/res/values/preference_strings.xml
+++ b/Android-Application/res/values/preference_strings.xml
@@ -17,9 +17,9 @@
 	<string name="pref_time_till_sleep_summary">Average amount of time it takes you to fall asleep</string>
 	<string name="pref_key_time_till_sleep">key_time_till_sleep</string>
 	
-	<string name="pref_num_powernap_suggestions_dialog_title">@string/pref_num_powernap_suggestions_title</string>
+	<string name="pref_num_powernap_suggestions_dialog_title">Power nap suggestions</string>
 	<string name="pref_num_powernap_suggestions_dialog_summary">Set the number of suggested power naps in the pull-up drawer</string>
-	<string name="pref_num_powernap_suggestions_title">Number of power nap suggestions</string>
+	<string name="pref_num_powernap_suggestions_title">Power nap suggestions</string>
 	<string name="pref_num_powernap_suggestions_summary">Number of power nap suggestions in the pull-up drawer</string>
 	<string name="pref_key_num_powernap_suggestions">key_num_displayed_alarms</string>
 	
